--- a/nodejs/isoldry/public/style/style.css
+++ b/nodejs/isoldry/public/style/style.css
@@ -1,21 +1,29 @@
 body {
 	font-size: 20px;
-    color: #656566;
-	font-family: "Gudea", "Arial", "Helvetica", sans-serif;
-  background-image:url('../img/back.jpg');
+    color: #616166;
+	font-family: "Inika", "Arial", "Helvetica", sans-serif;
+    background-image:url('../img/back.jpg');
+    background-repeat:no-repeat;
+    background-color:#d7d6bb;
 }
+/*
+#background {
+	margin-left: auto; 
+	margin-right: auto;
+    background-image:url('../img/back.jpg');
+    background-repeat:no-repeat;
+}*/
 
 #main {
-	/*box-shadow: 5px 5px 15px #555;
+	box-shadow: 5px 5px 15px #555;
 	-moz-box-shadow: 5px 5px 15px #555;
-	-webkit-box-shadow: 5px 5px 15px #555;*/
-	background-color: white;
+	-webkit-box-shadow: 5px 5px 15px #555;
+	background-color: rgba(255,255,255,0.9);
 	margin-left: auto; 
 	margin-right: auto;
 	margin-top: 70px;
 	padding: 30px;
     width: 560px;
-    border: 5px solid #bababa;
 }
 
 #logo {
