--- a/nodejs/isoldry/views/layout.jade
+++ b/nodejs/isoldry/views/layout.jade
@@ -2,8 +2,10 @@
 html(lang="fr")
     head
         title Isoldry
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
+
         link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
-        link(href="http://fonts.googleapis.com/css?family=Gudea", rel="stylesheet", type="text/css")
+        link(href="http://fonts.googleapis.com/css?family=Inika", rel="stylesheet", type="text/css")
 
         script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
         script(src="javascript/jquery.corner.js")
