--- a/nodejs/isoldry/views/layout.jade
+++ b/nodejs/isoldry/views/layout.jade
@@ -7,7 +7,8 @@ html(lang="fr")
         link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Inika", rel="stylesheet", type="text/css")
 
-        script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
+        #script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
+        script(src="javascript/jquery.min.js")
         script(src="javascript/jquery.corner.js")
         script(src="javascript/isoldry.js")
     body
