--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -5,29 +5,23 @@ html(lang="en")
         link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Josefin+Sans:400", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Noticia+Text", rel="stylesheet", type="text/css")
-        script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
+        //script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
+        script(src="javascript/jquery.min.js")
         script(src="javascript/jquery.corner.js")
         script(src="javascript/mizot.js")
     body
-        div#top Remi Melisson, software developper
+        div#top Remi Melisson, software developer
         div#nav 
           span.selected_link.link#link_home: a(href='#') Home
-          span.link#link_work: a(href='#') Work
+          span.link#link_work: a(href='#') Activities
           span.link#link_contact: a(href='#') Contact
-          span.link#link_resume: a(href='#') Resume
+          span.link#link_resume: a(href='#') Bio
         div.content#home
           div#img_div
               img#me_img(src="img/id.jpg")
-          div#welcome <span class="capital">W</span>elcome here, I'm Remi Melisson, Ph.D. student and enthusiast developper. 
-          p I started my thesis in october 2010 into the 
-              a(href="http://www.orange.com/en_EN/innovation/create/Orange_Labs_network/", "Orange Labs Website") Orange Labs
-              &nbsp;at Grenoble. My work is supervised by the 
-              a(href="http://adam.lille.inria.fr/", "ADAM website") INRIA ADAM Team
-              , associated to the University of Lille 1. 
-              p Here you can find some information about my work and other computing activities. Feel free to contact me via email, Twitter or why not, smoke signals.
-          div#logo_div
-              img#logo_orange.logo(src="img/orange-logo.png")
-              img#logo_inria.logo(src="img/logo_INRIA.png")
+          div#welcome <span class="capital">W</span>elcome here, my name is Remi Melisson and I'm an enthusiast developer. I'm currently located in France but I plan to move to London during the summer '12.
+          p I like great code (i.e. clean, elegant, well-tested, efficient…) and I'm looking for a position where code quality matters. I'm passionated by my work and I pay attention to the software community even if, during the past years, I was involved in the research area which teach me to take "recul" from the buzz. I would like to join an enthusiast team, using adapted technologies in order to deal with problems. Because I really like to solve problems. 
+          p Here you can find information about my previous activities and my "parcours". Feel free to contact me via email, Linked Information or why not, smoke signals. 
         div.content.invisible_content#contact Well, you can find me <a href="http://maps.google.fr/maps/place?q=Orange+R%26D+Meylan&hl=en&cid=8451382217444420832" target="_blank">there</a> : <br /><br />
             <a href="http://www.twitter.com/rmelisson"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-a.png" alt="Follow rmelisson on Twitter"/></a>
             <br/>
@@ -51,38 +45,48 @@ html(lang="en")
               br
               hr
               br
-            span.hash3 Now 
-            span.cv_line Ph.D. student, with the INRIA ADAM Project-Team and the Orange Labs, Meylan
+            span.hash3 Since 2011 
+            span.cv_line Research Engineer and Ph.D. student, Orange R&D, Grenoble
+            br
+            span.cv_uline HTML5, CSS3, REST, UPnP, Java, LXC, Linux
             br
             br
             span.hash3 2010
-            span.cv_line Research Engineer, ADAM Project-Team at INRIA Lille - Nord Europe.
+            span.cv_line Research Engineer, ADAM Project-Team at INRIA Lille - Nord Europe. 
+            br
+            span.cv_uline Collaborate to the FraSCAti platform open source project): Java, SOA, CBSE
             br
             br
             span.hash3 2009
-            span.cv_line Master Degree at the University of Lille : Software Engineering and Architecture - Ingenierie et architecture logicielle
+            span.cv_line Master Degree at the University of Lille
+            br
+            span.cv_uline Software Engineering and Architecture - Ingenierie et architecture logicielle
             br
             br
             span.hash3 2009
-            span.cv_line End-of-studies internship at Open for 6 months. Software engineering : .Net, Spring, NHibernate - Project management. Paris.
+            span.cv_line End-of-studies internship at a(href="http://www.open-group.com") Open for 6 months. Paris.
+            br
+            span.cv_uline .Net, Spring, NHibernate - Project management. 
             br
             br
             span.hash3 2008
-            span.cv_line Internship, DART Project-Team at INRIA Lille - Nord Europe. Parallel Programming on GPU : ASM, C, C++, CUDA.
+            span.cv_line Internship, DART Project-Team at INRIA Lille - Nord Europe. 
+            br
+            span.cv_uline Parallel Programming on GPU : ASM, C, C++, CUDA.
 
         div.content.invisible_content#work
-            h3 Thesis
+            span Some of the projects I was involved in the past three years :
+            h3 virtual STB
             p.small I'm actually working on my Ph.D. study, which aims to propose an End2End architecture for virtualize the Orange Set Top Box into the operator infrastructure. 3 goals have been identified : deliver STB services to every home devices with rendering capabilities; move STB functions to operator infrastructure in a scalable and adaptable way; provide proxies for OTT (Over The Top : Google, Facebook...) services into the LAN across home networks standards.
-            br
-            hr
-            ... past projects
+            h3 Facil
+            p.small Facil is a web site which allow Colombian citizens to access to administrative documents in order to let them trigger jsutice action without the need of a lawer. It is a Ruby on Rails application which will be available in a few months.
             h3 Mundle
             p.small Mundle is a tool which provide a way for dynamically convert maven artifact into OSGi bundles at runtime. Based on bnd and Maven 3 API, it allows to benefit from the Maven dependency description in order to deploy Maven artifact as bundles. This tool should facilitate the migration of standard Maven based Java project onto OSGi platforms.
             h3 FraSCAti on OSGi
             p.small FraSCAti is a Java implementation of the Service Component Architecture (SCA) standard. It relies on the Fracal component model in order to allow dynamic reconfiguration on SCA based software. I am working on a merge between SCA and OSGi concept which could clarify the different responsibilities of those specifications.
-            h3 FraSCAti @authentication
-            p.small coming soon... 
             h3 Binjiu
             p.small Binjiu is a set of facility for using UPnP protocol in order to achieve remote calls within Java distributed applications. Building on top of CyberLink for Java (which is a java implementation of UPnP protocol), it supplies the discovery benefits of UPnP to service oriented Java software.
             h3 MIND Project
             p.small MIND is a project which depend on the Minalogic global competitive cluster. This project aims to provide a model and a valid infrastructure for developing lightweight (as well as dramatically lightweight) embedded software according to component based software engineering paradigms. More precisely, we are taking part in the development of an IDE (textual and graphical integrated editors) for component architecture definition. To achieve those goals, we are using the Fractal component model and the Eclipse Modeling Framework (EMF, GMF, TMF-Xtext).
+            h3 Pass GRL
+            p.small blabl blalba ala oazh aoh apzahja pa pojafp apa oja
