--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -19,9 +19,11 @@ html(lang="en")
         div.content#home
           div#img_div
               img#me_img(src="img/id.jpg")
-          div#welcome <span class="capital">W</span>elcome here, my name is Remi Melisson and I'm an enthusiast developer. I'm currently located in France but I plan to move to London during the summer '12.
-          p I like great code (i.e. clean, elegant, well-tested, efficient…) and I'm looking for a position where code quality matters. I'm passionated by my work and I pay attention to the software community even if, during the past years, I was involved in the research area which teach me to take "recul" from the buzz. I would like to join an enthusiast team, using adapted technologies in order to deal with problems. Because I really like to solve problems. 
-          p Here you can find information about my previous activities and my "parcours". Feel free to contact me via email, Linked Information or why not, smoke signals. 
+          br
+          div#welcome <span class="capital">W</span>elcome here, I'm Remi Melisson, enthusiast developer. I'm currently located in France but I plan to move to London during the 2012 summer.
+          br
+          p.alinea I like great code (i.e. clean, elegant, well-tested, efficient, SOLID…) and I'm looking for a position where code quality matters. I'm passionate by my work and I pay attention to the software community even if, during the past years, I was involved in the research area which teach me to stand back from the buzz. I would like to join an enthusiast team, using adapted technologies in order to deal with problems. Because I really like to solve problems. 
+          p.alinea Here you can find information about my background and my early career. Feel free to contact me via email, Linked In or why not, smoke signals. 
         div.content.invisible_content#contact Well, you can find me <a href="http://maps.google.fr/maps/place?q=Orange+R%26D+Meylan&hl=en&cid=8451382217444420832" target="_blank">there</a> : <br /><br />
             <a href="http://www.twitter.com/rmelisson"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-a.png" alt="Follow rmelisson on Twitter"/></a>
             <br/>
