--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -13,7 +13,7 @@ html(lang="en")
         div#top Remi Melisson, software developer
         div#nav 
           span.selected_link.link#link_home: a(href='#') Home
-          span.link#link_work: a(href='#') Activities
+          span.link#link_work: a(href='#') Activity
           span.link#link_contact: a(href='#') Contact
           span.link#link_resume: a(href='#') Bio
         div.content#home
@@ -22,7 +22,8 @@ html(lang="en")
           br
           div#welcome <span class="capital">W</span>elcome here, I'm Remi Melisson, enthusiast developer. I'm currently located in France but I plan to move to London during the 2012 summer.
           br
-          p.alinea I like great code (i.e. clean, elegant, well-tested, efficient, SOLID…) and I'm looking for a position where code quality matters. I'm passionate by my work and I pay attention to the software community even if, during the past years, I was involved in the research area which teach me to stand back from the buzz. I would like to join an enthusiast team, using adapted technologies in order to deal with problems. Because I really like to solve problems. 
+          p.alinea I like great code (i.e. clean, elegant, well-tested, efficient, SOLID…) and I'm looking for a position where code quality matters. I'm passionate by my work and I pay attention to the software community. During the past years, I was involved in the research area where I learned to stand back and look ahead. 
+          p.alinea I would like to join an enthusiast team, using adapted technologies in order to solve problems, challenges. Currently, I'm especially interested by scalable needs, for example in the scope of big data.
           p.alinea Here you can find information about my background and my early career. Feel free to contact me via email, Linked In or why not, smoke signals. 
         div.content.invisible_content#contact Well, you can find me <a href="http://maps.google.fr/maps/place?q=Orange+R%26D+Meylan&hl=en&cid=8451382217444420832" target="_blank">there</a> : <br /><br />
             <a href="http://www.twitter.com/rmelisson"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-a.png" alt="Follow rmelisson on Twitter"/></a>
@@ -47,39 +48,49 @@ html(lang="en")
               br
               hr
               br
-            span.hash3 Since 2011 
-            span.cv_line Research Engineer and Ph.D. student, Orange R&D, Grenoble
+            span.hash3 Since 2011
+            span.cv_line 
+              |Research Engineer and Ph.D. student, 
+              a(href="http://www.orange.com/en_EN/innovation/", target="_blank") Orange R&D
+              |. Grenoble.
             br
             span.cv_uline HTML5, CSS3, REST, UPnP, Java, LXC, Linux
             br
             br
             span.hash3 2010
-            span.cv_line Research Engineer, ADAM Project-Team at INRIA Lille - Nord Europe. 
+            span.cv_line Research Engineer, ADAM Project at 
+              a(href="http://www.inria.fr/en", target="_blank") INRIA
+              |. Lille. 
             br
-            span.cv_uline Collaborate to the FraSCAti platform open source project): Java, SOA, CBSE
+            span.cv_uline Collaborate to the 
+              a(href="http://frascati.ow2.org", target="_blank") FraSCAti platform 
+              |(open source project) - Java, SOA, CBSE
             br
             br
             span.hash3 2009
-            span.cv_line Master Degree at the University of Lille
+            span.cv_line Master of Science from University of Lille.
             br
             span.cv_uline Software Engineering and Architecture - Ingenierie et architecture logicielle
             br
             br
             span.hash3 2009
-            span.cv_line End-of-studies internship at a(href="http://www.open-group.com") Open for 6 months. Paris.
+            span.cv_line 
+              |End-of-studies internship at 
+              a(href="http://www.open-groupe.com", target="_blank") Open 
+              |for 6 months. Paris
             br
-            span.cv_uline .Net, Spring, NHibernate - Project management. 
+            span.cv_uline .Net, Spring, NHibernate - Project management 
             br
             br
             span.hash3 2008
             span.cv_line Internship, DART Project-Team at INRIA Lille - Nord Europe. 
             br
-            span.cv_uline Parallel Programming on GPU : ASM, C, C++, CUDA.
+            span.cv_uline Parallel Programming on GPU - ASM, C, C++, CUDA
 
         div.content.invisible_content#work
-            span Some of the projects I was involved in the past three years :
+            span Some of the projects I have been involved in the past three years :
             h3 virtual STB
-            p.small I'm actually working on my Ph.D. study, which aims to propose an End2End architecture for virtualize the Orange Set Top Box into the operator infrastructure. 3 goals have been identified : deliver STB services to every home devices with rendering capabilities; move STB functions to operator infrastructure in a scalable and adaptable way; provide proxies for OTT (Over The Top : Google, Facebook...) services into the LAN across home networks standards.
+            p.small I'm currently working on my Ph.D. study, which aims to propose an End2End architecture for virtualize the Orange Set Top Box into the operator infrastructure. 3 goals have been identified : deliver STB services to every home devices with rendering capabilities; move STB functions to operator infrastructure in a scalable and adaptable way; provide proxies for OTT (Over The Top : Google, Facebook...) services into the LAN across home networks standards.
             h3 Facil
             p.small Facil is a web site which allow Colombian citizens to access to administrative documents in order to let them trigger jsutice action without the need of a lawer. It is a Ruby on Rails application which will be available in a few months.
             h3 Mundle
