--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -5,8 +5,8 @@ html(lang="en")
         link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Josefin+Sans:400", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Noticia+Text", rel="stylesheet", type="text/css")
-        //script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
-        script(src="javascript/jquery.min.js")
+        script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js")
+        //script(src="javascript/jquery.min.js")
         script(src="javascript/jquery.corner.js")
         script(src="javascript/mizot.js")
     body
@@ -54,7 +54,7 @@ html(lang="en")
               a(href="http://www.orange.com/en_EN/innovation/", target="_blank") Orange R&D
               |. Grenoble.
             br
-            span.cv_uline HTML5, CSS3, REST, UPnP, Java, LXC, Linux
+            span.cv_uline HTML5, CSS3, REST, UPnP, Maven, Java, LXC, Linux
             br
             br
             span.hash3 2010
@@ -64,7 +64,7 @@ html(lang="en")
             br
             span.cv_uline Collaborate to the 
               a(href="http://frascati.ow2.org", target="_blank") FraSCAti platform 
-              |(open source project) - Java, SOA, CBSE
+              |(open source project) - OSGi, Maven, Java, SOA, CBSE
             br
             br
             span.hash3 2009
