--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -2,6 +2,7 @@
 html(lang="en")
     head
         title rmelisson
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
         link(href="style/style.css", media="screen", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Josefin+Sans:400", rel="stylesheet", type="text/css")
         link(href="http://fonts.googleapis.com/css?family=Noticia+Text", rel="stylesheet", type="text/css")
