--- a/nodejs/mizot/views/layout.jade
+++ b/nodejs/mizot/views/layout.jade
@@ -27,18 +27,20 @@ html(lang="en")
           p.alinea I would like to join an enthusiast team, using adapted technologies in order to solve problems, challenges. Currently, I'm especially interested by scalable needs, for example in the scope of big data.
           p.alinea Here you can find information about my background and my early career. Feel free to contact me via email, Linked In or why not, smoke signals. 
         div.content.invisible_content#contact Well, you can find me <a href="http://maps.google.fr/maps/place?q=Orange+R%26D+Meylan&hl=en&cid=8451382217444420832" target="_blank">there</a> : <br /><br />
-            <a href="http://www.twitter.com/rmelisson"><img src="http://twitter-badges.s3.amazonaws.com/t_logo-a.png" alt="Follow rmelisson on Twitter"/></a>
-            <br/>
-            <br/>
-            <a href="https://profiles.google.com/u/0/112651096543043920931"><img src="img/g-plus-icon.png" alt="Follow me on G+"/></a>
-            <br/>
-            <br/>
-            //-
-              <a href="http://www.github.com/rmelisson"><img src="https://github.com/images/modules/header/logov3.png" alt="me on GitHub"/></a>
-              <br/>
-              <br/>
             span#liam
-                <img src="img/enveloppe.jpg" alt="send me" onclick="confirm('rmelisson gmail.com');"/> 
+                <img src="http://upload.wikimedia.org/wikipedia/en/0/0a/Gmail_logo.png" style="width:100px;" alt="send me" onclick="confirm('rmelisson gmail.com');"/> 
+            <br/>
+            <br/>
+            <a href="http://www.github.com/rmelisson" target="_blank"><img src="https://github.com/github/media/raw/master/logos/github_logo_social_coding_outlined.png" alt="me on GitHub" style="width:85px;"/></a>
+            <br/>
+            <br/>
+            <a href="http://www.linkedin.com/profile/view?id=76022946&trk=tab_pro" target="_blank"><img src="http://fr.press.linkedin.com/sites/all/themes/presslinkedin/images/LinkedIn_IN_Icon_55px.jpg" alt="me on LinkedIn"/></a>
+            <br/>
+            <br/>
+            <a href="https://profiles.google.com/u/0/112651096543043920931" target="_blank"><img src="img/g-plus-icon.png" alt="Follow me on G+"/></a>
+            <br/>
+            <br/>
+            <a href="http://www.twitter.com/rmelisson" target="_blank"><img src="https://si0.twimg.com/a/1334246584/images/logos/twitter_newbird_boxed_whiteonblue.png" style="width:55px;" alt="Follow rmelisson on Twitter"/></a>
 
         div.content.invisible_content#resume 
             //- Download my resume :
@@ -53,25 +55,26 @@ html(lang="en")
             span.cv_line 
               |Research Engineer and Ph.D. student, 
               a(href="http://www.orange.com/en_EN/innovation/", target="_blank") Orange R&D
-              |. Grenoble.
+              |. Grenoble
             br
-            span.cv_uline HTML5, CSS3, REST, UPnP, Maven, Java, LXC, Linux
+            span.cv_uline REST API, UPnP, OSGi, Maven, Java, Git, Linux - Software design
             br
             br
             span.hash3 2010
             span.cv_line Research Engineer, ADAM Project at 
               a(href="http://www.inria.fr/en", target="_blank") INRIA
-              |. Lille. 
+              |. Lille 
             br
-            span.cv_uline Collaborate to the 
+            span.cv_uline Contribute to the FOSS 
               a(href="http://frascati.ow2.org", target="_blank") FraSCAti platform 
-              |(open source project) - OSGi, Maven, Java, SOA, CBSE
+              | - Android, OSGi, Maven, Java, SOA, CBSE
             br
             br
             span.hash3 2009
-            span.cv_line Master of Science from University of Lille.
+            span.cv_line Master of Science, University of Lille
             br
-            span.cv_uline Software Engineering and Architecture - Ingenierie et architecture logicielle
+            span.cv_uline Software Engineering and Architecture - 
+              a(href="http://fil.univ-lille1.fr/master-informatique/iagl/", target="_blank") Ingenierie et architecture logicielle
             br
             br
             span.hash3 2009
@@ -84,9 +87,11 @@ html(lang="en")
             br
             br
             span.hash3 2008
-            span.cv_line Internship, DART Project-Team at INRIA Lille - Nord Europe. 
+            span.cv_line Internship, DART Project-Team at INRIA. Lille
             br
             span.cv_uline Parallel Programming on GPU - ASM, C, C++, CUDA
+            br
+            br
 
         div.content.invisible_content#work
             span Some of the projects I have been involved in the past three years :
