fix google map centering problem

--- a/nodejs/isoldry/views/layout.jade
+++ b/nodejs/isoldry/views/layout.jade
@@ -64,8 +64,8 @@ html(lang="fr")
                 div.span10.offset1.invisible_content#contact
                     h1 Pour nous contacter
                     hr
-                    p Contact commercial : amaury.marandin@isoldry.com <br /> <br />Port Fluvial 2ème Ave 8ème Rue <br /> 59000 LILLE <br />
-                    p <iframe width="600" height="450" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.fr/maps?f=q&source=s_q&hl=fr&geocode=&q=8%C3%A8me+Rue,+Lille&aq=0&oq=8%C3%A8me&sll=50.62751,3.029931&sspn=0.008358,0.01929&vpsrc=0&ie=UTF8&hq=&hnear=8%C3%A8me+Rue,+59000+Lille,+Nord,+Nord-Pas-de-Calais&ll=50.62751,3.029931&spn=0.008358,0.01929&t=m&z=14&output=embed"></iframe><br /><small><a href="http://maps.google.fr/maps?f=q&source=embed&hl=fr&geocode=&q=8%C3%A8me+Rue,+Lille&aq=0&oq=8%C3%A8me&sll=50.62751,3.029931&sspn=0.008358,0.01929&vpsrc=0&ie=UTF8&hq=&hnear=8%C3%A8me+Rue,+59000+Lille,+Nord,+Nord-Pas-de-Calais&ll=50.62751,3.029931&spn=0.008358,0.01929&t=m&z=14" style="color:#0000FF;text-align:left" target="_blank">Agrandir le plan</a></small>
+                    p Contact commercial : commercial@isoldry.com <br /> <br />Port Fluvial 2ème Ave 8ème Rue <br /> 59000 LILLE <br />
+                    p#map 
                     hr
 
             footer 
