--- a/nodejs/isoldry/views/layout.jade
+++ b/nodejs/isoldry/views/layout.jade
@@ -6,6 +6,7 @@ html(lang="fr")
         //script(src="javascript/jquery.min.js")
         script(src="javascript/jquery.corner.js")
         script(src="javascript/isoldry.js")
+        link(href="img/logo-ico.png", rel="shortcut icon")
         link(href="style/bootstrap/css/bootstrap.min.css", type="text/css", rel="stylesheet")
         link(href="style/style2.css", type="text/css", rel="stylesheet")
         link(href="http://fonts.googleapis.com/css?family=Yanone+Kaffeesatz", rel="stylesheet", type="text/css")
